# huelights

./: .coverage  .env.example  .gitignore  .ignore  CLAUDE.md  CREDENTIAL_MIGRATION.md  Makefile  QUICKSTART.md  README_MODERN.md  STARTUP_README.md  front_room_startup.py  hue_app.py  hue_app_modern.py  pyproject.toml  readme.md  requirements.txt  start.bat  start.sh  start_modern.py  startup_lights.bat  startup_lights.sh
.claude/: settings.local.json
creds/: hue_credentials.json
scripts/: create_linux_service.sh  create_macos_service.sh  create_windows_service.bat
tests/: __init__.py  conftest.py  test_controller.py  test_credentials.py  test_discovery.py
